--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,5 +37,5 @@ models:
     src:
       +materialized: ephemeral
 data_tests:
-  store_failures: true
+  +store_failures: true
   +schema: _test_failures
